tests/baselines/reference/annotationDeclarationFieldTypeError8.errors.txt
tests/cases/conformance/annotations/annotationDeclarationFieldTypeError8.ets(2,5): error TS28033: A type of annotation property have to be number, boolean, string, const enumeration types or array of above types, got: 'Boolean'.


==== tests/cases/conformance/annotations/annotationDeclarationFieldTypeError8.ets (1 errors) ====
    @interface Anno {
        a: Boolean
        ~
!!! error TS28033: A type of annotation property have to be number, boolean, string, const enumeration types or array of above types, got: 'Boolean'.
    }